--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,7 @@ htmlcov/
 nosetests.xml
 coverage.xml
 *,cover
-databases/sql.log
+sql.log
 
 # Translations
 *.mo
@@ -56,3 +56,5 @@ docs/_build/
 
 # PyBuilder
 target/
+
+errors/
